--- a/Health/app/src/main/res/values/strings.xml
+++ b/Health/app/src/main/res/values/strings.xml
@@ -2,6 +2,76 @@
     <string name="app_name">Здоровье</string>
     <string name="welcome">Добро пожаловать!</string>
     <string name="entrance">Вход</string>
+    <string name="title_activity_recommendation_sleep">Рекомендации</string>
+    <string name="recommendation_sleep">
+        Способы борьбы с бессоницей:\n\n
+        1.	Ведите дневник.\nЗаписывайте в нем, сколько и когда вы спали, уровень усталости днем и другие симптомы. Это поможет понять, что стоит поменять в своем распорядке, а также, в крайнем случае, может пригодиться лечащему врачу.\n\n
+        2.	Установите график.\nНайдите такой вид деятельности, который помогает вам заснуть, и придерживайтесь его. Также старайтесь ложиться и просыпаться в одно и то же время.\n\n
+        3.	Используйте кровать правильно.\nКровать должна использоваться только для сна и секса. Не переносите туда свою работу. Так вы сделайте себе только хуже.\n\n
+        4.	Выберите хороший матрас.\nМатрас сильно влияет на качество сна. Плохой матрас может вызвать бессонницу и неприятные ощущения, поэтому позаботьтесь о качественном и приятном матрасе.\n\n
+        5.	Бросьте курить.\nВот еще один повод для того, чтобы бросить курить. Курильщики часто страдают от бессонницы. Некоторые исследования доказывают, что это связано с нехваткой никотина ночью.\n\n
+        6.	Проконсультируйтесь с врачом.\nЕсли вы попробовали абсолютно все, и ничего не помогло, то самое время обратиться к профессионалу. Врач может выяснить нарушения распорядка и прописать лекарства, которые помогут вернуть здоровый сон.\n\n
+        7.	Занимайтесь спортом.\nУмеренные аэробные упражнения позитивно влияют на качество сна. Тренироваться можно в любое время, но хотя бы за 3 часа до сна.\n\n
+        8.	Вставьте в расписание несколько «минут для беспокойства».\nПотратьте 10-15 минут в течение дня на решение важных проблем. Если решить их не представляется возможным, запишите их, чтобы они не мешались в голове. Это поможет избежать мыслей о проблемах ночью.\n\n
+        9.	Ограничьте кофеин.\nДа, мы знаем, насколько сильно вы любите кофе. Для начала постарайтесь перенести все приемы кофе на первую половину дня. Если это не поможет, вы знаете, что делать.\n\n
+        10.	Вздремните.\n10-20 минут короткого сна днем помогут расслабиться и отдохнуть. Однако не стоит дремать после 3 часов дня. Это негативно скажется на сне ночью.\n\n
+        11.	Прогуляйтесь.\nБольшое количество солнечного света способствует восстановлению баланса мелатонина, который помогает заснуть ночью.\n\n
+        12.	Ешьте «сонную» еду.\nВведите в свой рацион продукты, которые богаты магнием. К примеру, палтус, миндаль, кешью, шпинат, а также продукты с витамином В. К примеру, зеленые овощи, орехи, бобовые. Некоторые эксперты также рекомендуют принимать комплексы с витамином В6 и магнием.\n\n
+        13.	Попробуйте заняться медитацией.\nМедитация может не только положительно сказаться на качестве сна, но и на качестве всей вашей жизни! В этот совет можно также добавить занятия йогой, а также глубокое и правильное дыхание.\n\n
+        14.	Избегайте больших приемов пищи вечером.\nОрганизму придется переваривать всю эту еду во время сна, а это не приведет ни к чему хорошему.\n\n
+        15.	Приглушите свет за два часа до сна.\nАмериканские исследования показали, что количество света вечером влияет на качество сна. Вряд ли вы захотите сидеть в темноте весь вечер, поэтому определите приятный для себя уровень освещения. Кстати, можете воспользоваться утилитой f.lux, которая сделает то же самое с экраном компьютера.\n\n
+        16.	Ограничьте использование гаджетов вечером.\nХолодный свет от экранов гаджетов мешает телу подготовиться ко сну, стимулируя выработку дневных гормонов. Если вы не можете отказаться от устройств, хотя бы максимально понизьте яркость экрана.\n\n
+        17.	Не пейте перед сном.\nРечь, конечно же, об алкоголе. Кажется, что выпивка наоборот способствует сну? Возможно, вы заснете быстрее, но алкоголь может нарушить циклы сна, и, несмотря на то, что вы будете спать, утром вы проснетесь разбитым.\n\n
+        18.	Не занимайтесь умственной активностью перед сном.\nОтложите работу, не смотрите научные передачи и читайте легкую литературу.\n\n
+        19.	Займитесь сексом.\nНаверное, стоило поставить этот пункт выше :)\n\n
+        20.	Держите свою спальню в прохладе.\nЖелательно в пределах 20 градусов.\n\n
+        21.	Воспользуйтесь натуральными снотворными.\nК примеру, экстрактом валерианы.\n\n
+        22.	Не старайтесь заснуть, если вам не хочется.\nДа, я знаю это ощущение, когда на часах уже 2 часа ночи, а спать совсем не хочется. Но ложиться в постель, когда вы совсем не чувствуете сонливости, еще хуже. Если вы не заснули в первые 20 минут, то вылезайте из кровати и займитесь чем-нибудь расслабляющим.\n\n
+        23.	Минимизируйте количество шума.\nПрожив несколько лет в общежитии, я понимаю, что это не всегда возможно. Однако если вы можете контролировать источники шума, то сведите его к минимуму.\n\n
+        24.	Дайте выход своему стрессу.\nЗапишите все, что вас беспокоит, на листе бумаги. Хотя нет, к черту. Идите в спортзал и отдубасьте боксерскую грушу. Попробуйте и напишите свои ощущения!\n\n
+        25.	Заварите чай с ромашкой.\nРомашка издавна славится своими успокаивающими свойствами, поэтому здесь вы точно не ошибетесь.\n\n
+        26.	Примите горячую ванну или душ.\nРезкий скачок температуры может склонить вас ко сну.\n\n
+        27.	Выпейте горячего молока.\nНаукой не доказано влияние молока на сон, но многие из нас все еще помнят горячее молоко перед сном в детстве. Может сработать!\n\n
+        28.	Посчитайте овец.\nЭто не 100% метод, но концентрация на одной вещи действительно может помочь заснуть. Не слишком любите овец? Сфокусируйтесь на вдохах или выдохах — это тоже неплохой способ.\n\n
+        29.	Визуализируйте сон.\nПредставьте себя на берегу океана на белоснежном песке. Хотя зачем я все это рассказываю, ваше воображение сделает всю работу за меня. Просто представьте себя в приятном месте, расслабьтесь и получайте удовольствие.\n\n
+        30.	Не злитесь на себя.\nПримите бессонницу и постарайтесь даже в такой безвыходной ситуации найти свои плюсы. Не осуждайте себя за то, что не можете уснуть. Ведь вы можете увидеть замечательный рассвет.\n\n
+        \n
+        Как быстро взбодриться? У нас есть ответ\n\n
+        1. Включите любимую музыку\n
+        Музыка магическим образом влияет на наши чувства и внимание. Она может как поднять настроение, так и спровоцировать меланхолию. Так же и сонливостью. Для бодрости послушайте приятную для вас музыку, но не расслабляющую, которая будет склонять вздремнуть час-другой. И, если позволяют условия, сделайте звук погромче, так скорее разгонится сон, захочется танцев или какой-то активности.\n
+        \n
+        2. Прогулка\n
+        Даже если у вас еще много дел, но вы чувствуете сонливость, отвлекитесь и выйдите на улицу. Не важно, какая погода. Вам нужно улучшить кровообращение и насытить организм кислородом, встряхнуться. Если никак не получается выйти из помещения (нет времени, дождь/снег), походите по комнате, если вы дома, займитесь уборкой. Если вы на работе, сходите в соседний кабинет, спуститесь и поднимитесь по лестнице. Это будет минимальной, но нагрузкой. Вы почувствуете прилив крови к голове, активацию мыслительной деятельности и, как следствие, спад сонливости.\n
+        \n
+        3. Солнечный свет\n
+        Делайте все возможное, чтобы каждый день получать порцию солнечного света, который помогает побороть сонливость. Это поможет отрегулировать цикл сна-бодрствования. Когда вы оказываетесь на солнце, в мозг поступают сигналы, что пришло время активности. Чтобы витамин D накапливался в организме, нужно ежедневно бывать на солнечном свете хотя бы в течение 15-20 минут (подставлять лицо и глаза) желательно без солнцезащитного крема. В осенне-зимнее время вас спасет витамин D, который продается в аптеке. Можно купить в таблетках или каплях. Хотя врачи рекомендуют тем, у кого дефицит этого витамина, принимать круглогодично.\n
+        \n
+        4. Избегайте продуктов, которые вызывают сонливость\n
+        Есть определенные продукты, которые делают нас еще более сонными, чем мы есть. Если у вас и без них проблемы с бодростью, исключите из меню (особенно днем): алкоголь, сладости, картошку, белый обработанный рис, макароны, мучное, копченое мясо и колбаса, сладкие каши.\n
+        \n
+        5. Примите холодный душ\n
+        Примите непродолжительный холодный душ (можно контрастный), он помогает побороть сонливость. Это вас здорово взбодрит и заодно оздоровит. Если нет возможности отправиться в душ, брызните в лицо холодной водой – это тоже неплохо работает. Внезапное изменение температуры разбудит вас, улучшит кровообращение и концентрацию внимания. Мокрое лицо лучше высушить под вентилятором или кондиционером — это добавит бодрости.\n
+        \n
+        6. Включите в питание больше Омега-3\n
+        Омега-3 улучшает иммунитет, дарит больше энергии и сохраняет умственную активность в течение всего дня. Вы можете принимать Омега отдельно в капсулах или есть продукты с высоким содержанием полиненасыщенных жирных кислот. Например: рыбу форель, лосось, тунец, сардину, орехи, бобовые, яйца, соевые продукты, арахисовое масло, семена и масло льна.\n
+        \n
+        7. Зеленый чай\n
+        После утренней чашки кофе (или двух) переключитесь на зеленый чай. Именно зеленый чай очень хорошо тонизирует и заряжает здоровой энергией (без сильного сердцебиения и тремора, как может быть, если перепьешь кофе). Можно пить до трех чашек в день. Зеленый чай также способствует хорошему сну (благодаря содержанию полиефенола), так что вы словите двух зайцев: будете и бодрыми, и качественно спать.\n
+        \n
+        8. Ароматерапия\n
+        Ароматерапия помогает поднять уровень энергии и улучшить ее качество, побороть усталость, раздражительность, головные боли и, конечно, дневную сонливость. Одни из лучших эфирных масел для этой цели: мята, грейпфрут, апельсин, базилик и розмарин. Вы можете растереть несколько капель между ладонями и сделать несколько глубоких вдохов, можете добавить в аромадиффузор или аромалампу. А также просто капнуть масло на запястье или кусочек ткани.\n
+        \n
+        9. Вода с лимоном\n
+        Выпивая каждое утро натощак стакан лимонной воды, вы можете предотвратить дневную сонливость. К тому же обезвоживание влияет на уровень кислорода в мозге, снижение которого может вызывать чувство усталости или сонливости в течение дня. Лимонная вода «увлажняет» организм, насыщает витамином С, помогает выводить токсины и ускоряет обмен веществ.\n
+        \n
+        10. Упражнения\n
+        Физическая активность увеличивает приток крови ко всем частям тела, в результате чего вы почувствуете больше энергии. С ежедневной 30-минутной активностью вы можете добиться хороших результатов. Если в рабочее время не получается выполнить упражнения, хотя бы прогуляйтесь или сделайте небольшую растяжку в свободном кабинете или на коридоре.\n
+        \n
+        11. Здоровая пища\n
+        Чтобы побороть сонливость днем, никогда не пропускайте прием пищи с утра. Здоровый и питательный завтрак даст вашему мозгу «пищу», необходимую для поддержания бодрости и продуктивности. Игнорирование завтрака приводит к понижению сахара в крови, поэтому вы можете испытывать слабость, сонливость и головную боль.\n
+        Хороший завтрак – это еда с высоким содержанием жира и белка. Например: яйца, йогурт, творог, свежие фрукты, овсянка, орехи, смузи. А также избегайте плотных обедов, особенно макарон и мучного.\n
+
+    </string>
 
 
 </resources>
