--- a/Health/app/src/main/res/values/strings.xml
+++ b/Health/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Здоровье</string>
+    <string name="app_name">Здоров\'Я</string>
     <string name="title_activity_recommendation_sleep">Рекомендации</string>
 
     <!--ActivityAddingDayMenu-->
@@ -22,7 +22,7 @@
     <string name="enterPassword">Введите пароль</string>
     <string name="remember">Запомнить</string>
     <string name="signIn">Войти</string>
-    <string name="signUp">Зарегестрироваться</string>
+    <string name="signUp">Зарегистрироваться</string>
 
     <!--ActivityHome-->
     <string name="health">Здоровье</string>
@@ -65,7 +65,7 @@
     <string name="genderReg">Пол</string>
     <string name="genderBoyReg">Мужской</string>
     <string name="genderGirlReg">Женский</string>
-    <string name="signUpReg">Зарегестрироваться</string>
+    <string name="signUpReg">Зарегистрироваться</string>
 
     <!--ActivitySettingsProfile-->
     <string name="editing">Редактирование</string>
@@ -190,11 +190,11 @@
 
     <!--DialogAddProduct-->
     <string name="adding">Добавление</string>
-    <string name="informationAddProduct">Данного товара нет в базе Введите информацию о 100г продукта</string>
+    <string name="informationAddProduct">Данного товара нет в базе.\nВведите информацию о 100г продукта</string>
     <string name="nameProduct">Название товара</string>
     <string name="proteinAddProduct">Белки</string>
     <string name="fatAddProduct">Жиры</string>
-    <string name="carbohydrateAddProduct">Улгеводы</string>
+    <string name="carbohydrateAddProduct">Углеводы</string>
     <string name="caloriesAddProduct">кКал</string>
 
     <!--DialogInformationAboutProduct-->
@@ -211,7 +211,7 @@
     <string name="enterYourWeight">Введите свой вес</string>
 
     <!--FragmentCalorieCalculation-->
-    <string name="titleCalorieCalculation">Расчитайте суточную норму калорий</string>
+    <string name="titleCalorieCalculation">Рассчитайте суточную норму калорий</string>
     <string name="height_cc">Рост в см</string>
     <string name="weight_cc">Вес в кг</string>
     <string name="age_cc">Возраст</string>
@@ -340,5 +340,106 @@
 
     <!--NavigationHeader-->
     <string name="nameInHeader">Имя Фамилия</string>
+    <string name="action_settings">Settings</string>
+
+    <!--ActivityDescription-->
+    <string name="description">Описание вкладки</string>
+
+    <string name="waterDescription">
+        \t\t\t<b>Вкладка \"Вода\"</b> служит для контроля количества выпитой пользователем воды. В данной вкладке имеется возможность построения диаграммы выпиваемой воды за любой период времени для наглядного представления количества потребляемой жидкости. \n\n
+        \t\t\t<b>Цель по потреблению жидкости</b>\n
+        \t\t\tВ графе \"Цель\" справа от слеша (\'/\') расположено рекомендуемое значение количества выпиваемой воды в день в мл. Данное значение рассчитывается относительно пола и веса пользователя. При изменении веса во вкладке \"Вес\" либо в общих настройках профиля значение \"цели\" изменится автоматически.\n
+        \t\t\tВ графе \"Цель\" слева от слеша (\'/\') расположено значение количества выпитой воды за выбранный день в мл.\n\n
+        \t\t\t<b>Полоса прогресса выпитой воды</b>\n
+        \t\t\tПод графой \"Цель\" находится полоса, которая является графическим представлением прогресса выпитой воды в выбранный день относительно рекомендуемого значения.\n\n
+        \t\t\t<b>Изображение капли</b>\n
+        \t\t\tПо центру вкладки находится изображение капли, которая меняет "выражение лица" в зависимости от того, сколько воды в день выпил пользователь. Старайтесь делать капельку счастливой каждый день!\n\n
+        \t\t\t<b>Поле для ввода количества выпитой воды</b>\n
+        \t\t\tПод изображением капельки находится поле для ввода количества выпитой воды в мл.\n\n
+        \t\t\t<b>Кнопки \"-\" и \"+\"</b>\n
+        \t\t\tСлева и справа от поля для ввода количества выпитой воды находятся кнопки \"-\" и \"+\" для уменьшения и увеличения общего прогресса выпитой воды.\n\n
+        \t\t\t<b>Кнопка с выбранной датой</b>\n
+        \t\t\tНиже находится кнопка с выбранной датой, за которую происходит ввод данных. При нажатии на данную кнопку откроется календарь, в котором пользователь может выбрать любую дату заполнения. После этого пользователь может ввести информацию за выбранную дату. Таким образом, пользователь может ввести информацию за предыдущий день на следующий день.\n\n
+        \t\t\t<b>Кнопка \"Статистика\"</b>\n
+        \t\t\tВ самом низу вкладки находится кнопка \"Статистика\", при нажатии на которую откроется подробная статистика по выпитой воде на протяжении всего времени пользования приложением.\n\n
+    </string>
+
+    <string name="weightDescription">
+        \t\t\t<b>Вкладка \"Вес\"</b> служит для контроля веса пользователя с сохранением истории изменения веса, с помощью которой пользователь может удобно отслеживать динамику изменения веса.\n\n
+        \t\t\t<b>Вес пользователя</b>\n
+        \t\t\tВ верхней части экрана расположено значение веса пользователя на текущий момент в кг. Для изменения значения веса нужно нажать на цифру, которая отображает текущий вес пользователя, и ввести новое значение веса.\n\n
+        \t\t\t<b>Полоса прогресса ИМТ</b>\n
+        \t\t\tВокруг значения веса пользователя расположена полоса прогресса ИМТ (Индекс массы тела  — величина, позволяющая оценить степень соответствия массы человека и его роста и на основании этого косвенно судить о том, является ли масса недостаточной, нормальной или избыточной). Данный показатель рассчитывается по информации, содержащейся в профиле. Началом отсчета полосы прогресса ИМТ является состояние дистрофии, а концом - ожирение, поэтому показатель ИМТ будет идеальным, если полоса прогресса ИМТ заполнена ровно наполовину.\n\n
+        \t\t\t<b>Цветовой индикатор</b>\n
+        \t\t\tТакже в определении ИМТ помогает цветовой индикатор. Полоса ИМТ и значение веса пользователя могут быть бордового, красного, оранжевого, желтого и зеленого цветов. Зеленый цвет означает, что ИМТ пользователя в норме. Чем ближе ИМТ пользователя к дистрофии или ожирению, тем более красным становится оттенок индикатора.\n\n
+        \t\t\t<b>Кнопка \"Статистика\"</b>\n
+        \t\t\tПод значеним веса пользователя расположена кнопка \"Статистика\", при нажатии на которую откроется подробная статистика об изменении веса на протяжении всего времени пользования приложением.\n\n
+        \t\t\t<b>Краткая статистика</b>\n
+        \t\t\tВ нижней части экрана расположена краткая статистика изменения веса пользователя, а именно пять последних изменений веса, в которых содержится дата изменения веса, новое значение веса пользователя и значение, обозначающее, на сколько новое значение веса меньше/больше предыдущего значения. Например, значение \"+3,2\" означает, что вес увеличился на 3,2 кг, а значение \"-1,9\" означает, что вес уменьшился на 1,9 кг.\n\n
+    </string>
+
+    <string name="sleepDescription">
+        \t\t\t<b>Вкладка \"Сон\"</b> служит для контроля времени и режима сна пользователя. В данной вкадке имеется возможность построения диаграммы времени сна пользователя за любой приод времени для нагрядного рассмотрения режима сна пользователя.\n\n
+        \t\t\t<b>Время сна пользователя</b>\n
+        \t\t\tВ верхней части экрана расположено поле значения времени сна пользователя за текущие сутки.\n\n
+        \t\t\t<b>Время засыпания и пробуждения</b>\n
+        \t\t\tДля изменения значения времени сна нужно ввести время засыпания и пробуждения путем нажатия на данные поля и выбора желаемого времени.\n\n
+        \t\t\t<b>Кнопка \"Сохранить\"</b>\n
+        \t\t\tПри нажатии на кнопку \"Сохранить\" устанавливается время сна отностельно введенного времени засыпания и пробуждения.\n\n
+        \t\t\t<b>Кнопка с выбранной датой</b>\n
+        \t\t\tКнопка с выбранной датой, за которую происходит ввод данных. При нажатии на данную кнопку откроется календарь, в котором пользователь может выбрать любую дату заполнения. После этого пользователь может внести информацию за выбранную дату. Таким образом, пользователь может внести информацию за предыдущий день на следующий день.\n\n
+        \t\t\t<b>Кнопка \"Статистика\"</b>\n
+        \t\t\tПод значеним веса пользователя расположена кнопка \"Статистика\", при нажатии на которую откроется подробная статистика о времени сна, времени засыпания и пробуждения на протяжении всего времени пользования приложением.\n\n
+        \t\t\t<b>Кнопка \"Рекомендации\"</b>\n
+        \t\t\tПри нажатии на кнопку \"Рекомендации\" откроется вкладка, на которой пользователь может прочитать рекомендации по улучшению качества сна.\n\n
+    </string>
+
+    <string name="calorieCalculatorDescription">
+        \t\t\t<b>Вкладка \"Калькулятор\"</b> служит для расчета суточной нормы калорий, которую должен потреблять пользователь.\n\n
+        \t\t\t<b>Поля для заполнения</b>\n
+        \t\t\tНа экране расположены поля для ввода информации о пользователе: \"Рост\", \"Вес\", \"Возраст\", \"Пол\". Это обязательные поля для заполнения, без них рассчет будет невозможен.\n\n
+        \t\t\t<b>Поле \"Физическая активность\"</b>\n
+        \t\t\tПоле \"Физическая активность\" не является обязательной для заполнения.\n
+        \t\t\tПри нажатии на поле \"Физическая активность\" пользователь может выбрать уровень физической активности. Стоит понимать, что экстремальная активность соответсвует уровню активности профессиональных спортсменов с режимом в две тренировки в день.\n\n
+        \t\t\t<b>Кнопка\"Рассчитать\"</b>\n
+        \t\t\tПри нажатии на кнопку \"Рассчитать\" приложение рассчитывает пользователю суточную норму потребления калорий.\n\n
+    </string>
+
+    <string name="foodMenuDescription">
+        \t\t\t<b>Вкладка \"Меню питания\"</b> служит для составления собственного меню питания с автоматическим подсчетом кКал, белков, жиров и углеводов. Также пользователь может посмотреть уже составленные меню на неделю, по которым рекомендуется питаться.\n\n
+        \t\t\t<b>Кнопка \"Создать меню\"</b>\n
+        \t\t\tПри нажатии на кнопку \"Создать меню\" автоматически создается меню в разделе \"Ваши меню\". Нажатие возможно, только если открыт раздел \"Ваши меню\".\n\n
+        \t\t\t<b>Раздел \"Ваши меню\"</b>\n
+        \t\t\tВ разделе \"Ваши меню\" отображается список всех меню, созданных пользователем.\n
+        \t\t\tМеню можно <b>перемещать</b> на нужную позицию в списке путем длительного удержания.\n
+        \t\t\tМеню можно <b>удалить</b> путем сдвига (свайпа) вправо или влево.\n
+        \t\t\tТакже пользователь может <b>переименовать</b> меню. Для этого следует:\n
+        1. Нажать на меню, которое нужно переименовать.\n
+        2. Нажать на название вверху открывшейся вкладки.\n
+        3. Ввести новое название в открывшемся окнке.\n
+        4. Нажать кнопку \"Ок\".\n\n
+        \t\t\t\<b>Заполнение меню</b>\n
+        \t\t\tДля заполнения данных в меню следует нажать на желаемое меню, после этого откроется окно с подробной информацией о выбранном меню. Далее пользователь имеет возможность заполнить меню, свдинув (свайпнув) его влево. Стоит отметить, что требуется выбирать продукт/блюдо из предложенных при вводе его названия, если желаемый продукт/блюдо не были найдены в поиске, то необходимо ввести вес порции в граммах и нажать кнопку \"Добавить\". Далее откроется окно, в которое пользователь может внести всю информацию о продукте/блюде и добавить его в базу. После этого пользователь сможет найти товар в начальном поиске. Количество кКал, белков, жиров и углеводов считается автоматически при добавлении продукта/блюда в рацион. Полную информацию о меню пользователь может найти, вернувшись на страницу меню (сдвигая экран вправо).\n\n
+        \t\t\t<b>Раздел \"Рекомендуемые меню\"</b>\n
+        \t\t\tВ данном разделе пользователь может посмотреть уже составленные меню на неделю, по которым рекомендуется питаться.\n\n
+    </string>
+
+    <string name="nutritionControlDescription">
+        \t\t\t<b>Вкладка \"Контроль питания\"</b> служит для контроля питания пользователя, а именно для подсчета потребляемых кКал, белков, жиров и углеводов в день. А также предлагает возможность построения диаграмм по кКал и БЖУ за любой период.\n\n
+        \t\t\t<b>Кнопка \"Добавить день\"</b>\n
+        \t\t\tВверху экрана расположена кнопка \"Добавить день\", при нажатии на которую откроется календарь, где пользователь может выбрать дату заполняемого дня. После выбора даты по центру экрана добавится поле с выбранной датой.\n\n
+        \t\t\t<b>Кнопка \"Статистика\"</b>\n
+        \t\t\tВнизу экрана расположена кнопка \"Статистика\", при нажатии на которую откроется подробная статистика о количестве потребляемых калорий, белков, жиров и углеводов за любой промежуток времени.\n\n
+        \t\t\t<b>Заполнение данных</b>\n
+        \t\t\tПо центру экрана расположен список дней, в которые пользователь добавил информацию о своем питании. Для удаления одного из дней необходимо сдвинуть (спайпнуть) окно в левую или правую сторону. Для заполнения данных питания следует нажать на день, который нужно заполнить (предварительно добавив его в список). После нажатия откроется окно, в котором пользователь может добавлять всю информацию о питании. Стоит отметить, что требуется выбирать продукт/блюдо из предложенных при вводе его названия. Если желаемого продукта/блюда не нашлось в поиске, необходимо ввести вес порции в граммах и нажать кнопку \"Добавить\". Далее откроется окно, в которое пользователь сможет внести всю информацию о продукте/блюде и добавить его в базу. После этого пользователь сможет найти товар в начальном поиске. Количество кКал, белков, жиров и углеводов считается автоматически при добавлении продукта/блюда в рацион.\n\n
+    </string>
+
+    <string name="defaultDescription">
+        Для этой вкладки не предусмотрено описание
+    </string>
+    
+    <string name="privacyPolicy">
+        Нажимая кнопку \"Зарегистрироваться\" Вы соглашаетесь с <font color="#3599b0"><u><i>политикой конфиденциальности</i></u></font>.
+    </string>
 
 </resources>
